--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>My Website</title>
 	<style>
 		body {
-			background-color: #f2f2f2;
+			background-color: #424242;
 			font-family: Arial, sans-serif;
 		}
 		h1 {
@@ -12,22 +12,25 @@
 			font-size: 36px;
 			margin-top: 50px;
 			margin-bottom: 30px;
-			color: #333;
+			color: #fff;
 		}
 		input[type="text"] {
 			padding: 10px;
 			font-size: 16px;
 			width: 400px;
-			border: 1px solid #ccc;
+			border: none;
 			border-radius: 5px;
-			background-color: #fff;
+			background-color: #D2B48C;
 			color: #333;
 			box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+			margin: 0 auto;
+			display: block;
 		}
 		#output {
 			margin-top: 30px;
 			font-size: 20px;
-			color: #333;
+			color: #fff;
+			text-align: center;
 		}
 		.bold {
 			font-weight: bold;
@@ -39,7 +42,7 @@
 	<div style="text-align:center;">
 		<input type="text" id="myTextbox" placeholder="Type your text here...">
 	</div>
-	<div id="output" style="text-align:center;"></div>
+	<div id="output"></div>
 	<script>
 		let textBox = document.getElementById("myTextbox");
 		textBox.addEventListener("keyup", function(event) {
