--- a/index.html
+++ b/index.html
@@ -7,26 +7,34 @@
 			background-color: #424242;
 			font-family: Arial, sans-serif;
 			color: #fff;
+			font-size: 20px;
+			line-height: 1.5;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			margin: 0;
 		}
 		h1 {
 			text-align: center;
-			font-size: 36px;
+			font-size: 48px;
 			margin-top: 50px;
 			margin-bottom: 30px;
 		}
 		input[type="text"] {
-			padding: 10px;
-			font-size: 16px;
+			padding: 15px;
+			font-size: 24px;
 			width: 100%;
 			border: none;
 			border-radius: 5px;
-			background-color: #D2B48C;
+			background-color: #F5DEB3;
 			color: #333;
 			box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 		}
 		#output {
 			margin-top: 30px;
-			font-size: 20px;
+			font-size: 30px;
 			text-align: center;
 		}
 		.bold {
