--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 		}
 		.bold {
 			font-weight: bold;
+			background: linear-gradient(45deg, #ff0000, #ffffff);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
 		}
 	</style>
 </head>
