--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			justify-content: center;
 			align-items: center;
 			height: 100vh;
-			margin: 0;
+			margin: 25% 0 0 0;
 		}
 		h1 {
 			text-align: center;
