--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</style>
 </head>
 <body>
-	<h1>Bold Initials Website</h1>
+	<h1>Easy Text Reader</h1>
 	<input type="text" id="myTextbox" placeholder="Type your text here...">
 	<div id="output"></div>
 	<script>
