--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 			justify-content: center;
 			align-items: center;
 			height: 100vh;
-			margin: 25% 0 0 0;
+			margin: 0;
 		}
 		h1 {
 			text-align: center;
 			font-size: 48px;
-			margin-top: 50px;
+			margin-top: 30px;
 			margin-bottom: 30px;
 		}
 		input[type="text"] {
