--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			line-height: 1.5;
 			display: flex;
 			flex-direction: column;
-			justify-content: center;
+			justify-content: flex-start;
 			align-items: center;
 			height: 100vh;
 			margin: 0;
@@ -25,12 +25,13 @@
 		input[type="text"] {
 			padding: 15px;
 			font-size: 24px;
-			width: 100%;
+			width: 33%;
 			border: none;
 			border-radius: 5px;
 			background-color: #F5DEB3;
 			color: #333;
 			box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+			text-align: center;
 		}
 		.bold {
 			font-weight: bold;
@@ -42,7 +43,9 @@
 </head>
 <body>
 	<h1>Bold Initials Website</h1>
-	<input type="text" id="myTextbox" placeholder="Type your text here...">
+	<div style="display:flex;justify-content:center;">
+		<input type="text" id="myTextbox" placeholder="Type your text here...">
+	</div>
 	<script>
 		let textBox = document.getElementById("myTextbox");
 		textBox.addEventListener("input", function(event) {
