--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			line-height: 1.5;
 			display: flex;
 			flex-direction: column;
-			justify-content: flex-start;
+			justify-content: center;
 			align-items: center;
 			height: 100vh;
 			margin: 0;
@@ -25,13 +25,12 @@
 		input[type="text"] {
 			padding: 15px;
 			font-size: 24px;
-			width: 33%;
+			width: 100%;
 			border: none;
 			border-radius: 5px;
 			background-color: #F5DEB3;
 			color: #333;
 			box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-			text-align: center;
 		}
 		.bold {
 			font-weight: bold;
@@ -43,9 +42,7 @@
 </head>
 <body>
 	<h1>Bold Initials Website</h1>
-	<div style="display:flex;justify-content:center;">
-		<input type="text" id="myTextbox" placeholder="Type your text here...">
-	</div>
+	<input type="text" id="myTextbox" placeholder="Type your text here...">
 	<script>
 		let textBox = document.getElementById("myTextbox");
 		textBox.addEventListener("input", function(event) {
