--- a/privacy.html
+++ b/privacy.html
@@ -38,6 +38,6 @@
   <p>If you submit feedback or donations, your information will only be used to respond and is not shared with third parties.</p>
   <p>Questions? Contact <a href="mailto:arinouri.ca@gmail.com">arinouri.ca@gmail.com</a>.</p>
 
-  <a href="../read-easier.html">← Back to Read Easier Home</a>
+  <a href="index.html">← Back to Home</a>
 </body>
 </html>
