--- a/tos.html
+++ b/tos.html
@@ -39,6 +39,6 @@
   <p>We may update these terms occasionally. Continued use implies acceptance of changes.</p>
   <p>For questions, contact <a href="mailto:arinouri.ca@gmail.com">arinouri.ca@gmail.com</a>.</p>
 
-  <a href="read-better.html">← Back to Home</a>
+  <a href="index.html">← Back to Home</a>
 </body>
 </html>
