Toggle button & Page linking
Applied toggle button to all pages
Applied correct linking to each page

--- a/bionic/index.html
+++ b/bionic/index.html
@@ -23,7 +23,7 @@
     <div id="output"></div>
   </section>
 
-  <a href="../read-easier.html">← Back to Read Easier Home</a>
+  <a href="../index.html">← Back to Read Easier Home</a>
 
   <footer>
     &copy; 2025 BionicReader | Empowering Neurodiverse Minds 🧠
