--- a/chunking/index.html
+++ b/chunking/index.html
@@ -6,15 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/chunking.css" />
 </head>
-<body>
+<body class="dark">
 
   <h1>Chunking Tool</h1>
   <p>Paste your text and view it in focused, smaller sections (chunks).</p>
 
+  <div class="controls">
+    <button onclick="toggleTheme()">Toggle Light/Dark</button>
+  </div>
+
   <textarea id="chunkInput" placeholder="Paste your paragraph here..."></textarea>
 
   <div class="controls">
-    <label>Chunk size (words): <input id="chunkSize" type="number" value="30" min="5" max="100" /></label>
+    <label>Chunk size (words): 
+      <input id="chunkSize" type="number" value="30" min="5" max="100" />
+    </label>
     <button onclick="chunkText()">🔄 Chunk It</button>
   </div>
 
@@ -25,8 +31,16 @@
     <button onclick="nextChunk()">Next ➡</button>
   </div>
 
-  <a href="../read-easier.html">← Back to Read Easier Home</a>
+  <a href="../index.html">← Back to Read Easier Home</a>
+
+
+  <footer>
+    &copy; 2025 Read Easier | Chunk your thoughts 🧩
+  </footer>
 
   <script src="js/chunking.js"></script>
+
+
+
 </body>
 </html>
