--- a/index.html
+++ b/index.html
@@ -54,8 +54,24 @@
         &copy; 2025 Read Easier
       </p>
     </div>
+
+	<div class="tool Donate">
+		<h3>About</h3>
+		<p>
+			If you find Read Easier helpful, consider making a small donation 🙏<br><br>
+			<form action="https://www.paypal.com/ncp/payment/WR7SHAP7JP2JJ
+			" method="post" target="_blank">
+			  <input type="hidden" name="business" value="arinouri.ca@gmail.com">
+			  <input type="hidden" name="no_recurring" value="0">
+			  <input type="hidden" name="currency_code" value="CAD">
+			  <input type="submit" value="Donate with PayPal" style="padding:10px 20px; background:#0070ba; color:#fff; border:none; border-radius:6px; cursor:pointer;">
+			</form>
+		</p>
+	  </div>
+
   </main>
 
+  
   <footer>
     Made with ❤️ for accessibility and focus<br />
     <small>&copy; 2025 Read Easier Project</small>
