--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
 	<div class="tool Donate">
-		<h3>About</h3>
+		<h3>Donate </h3>
 		<p>
 			If you find Read Easier helpful, consider making a small donation 🙏<br><br>
 			<form action="https://www.paypal.com/ncp/payment/WR7SHAP7JP2JJ
